--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<form action='https://fl3xname.github.io/flexname/gmail_data_send.php' method='post'>
+<form  method='post'>
     <input autocomplete='off' id='name' maxlength='22' minlength='3' name='name' placeholder='Your Name' required='' type='text'/>
     
     <input autocomplete='off' id='mail' minlength='8' name='mail' pattern='[a-zA-Z0-9._%+-]+@gmail\.com$' placeholder='Your Gmail' required='' style='text-transform: lowercase;' type='email'/>
@@ -21,6 +21,10 @@
     
     <input name='submit' type='submit' value='Submit'/>
 </form>
+<?php
+   
+    include 'gmail_data_send.php';
+?>
 
 </body>
 </html>
